logs/Slang/generated/yosys/errors_syntax_err02.sv.log
name: errors_syntax_err02
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err02.v
should_fail: 1
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err02.v:3:17: error: packed dimensions not allowed on predefined integer type 'integer'
  input integer [3:0]x
                ^
